--- a/tbx/static_src/sass/components/_pullquote.scss
+++ b/tbx/static_src/sass/components/_pullquote.scss
@@ -42,7 +42,11 @@
     }
 
     &__company-logo {
-        filter: grayscale(1);
+        filter: grayscale(1) invert(1) brightness(1.5);
+
+        @include high-contrast-light-mode() {
+            filter: none;
+        }
     }
 
     &__cta {
